@@ -121,19 +121,6 @@ tasks.register("copyLibs", Copy) {
 
 build.dependsOn jar
 
-tasks.named("assemble") {
-    finalizedBy("prepMsi")
-}
-
-tasks.register("prepMsi") {
-    group = "potoflux"
-    description = "Prepare for MSI package"
-
-    dependsOn("copyLibs", "copyJar", "copyJfx")
-
-    finalizedBy("msiPackage")
-}
-
 tasks.register("copyJfx", Copy) {
     from configurations.runtimeClasspath
     include "javafx-*.jar"
@@ -167,10 +154,12 @@ tasks.register("copyJar", Copy) {
 }
 
 tasks.register("msiPackage") {
-    mustRunAfter("copyJar")
+    dependsOn("build", "copyLibs", "copyJar", "copyJfx")
 
     group = "potoflux"
     description = "build as msi installer"
+
+    mkdir("$buildDir/libs/output")
 
     doLast {
         exec {
@@ -195,6 +184,36 @@ tasks.register("msiPackage") {
             "--app-version", "$version",
             "--icon", "$buildDir/libs/main.ico",
             "--win-upgrade-uuid", "5536eb5f-55c0-408d-b034-677536a3a078"
+        }
+    }
+}
+tasks.register("rpmPackage") {
+    dependsOn("build", "copyLibs", "copyJar", "copyJfx")
+
+    group = "potoflux"
+    description = "build as msi installer"
+
+    mkdir("$buildDir/libs/output")
+
+    doLast {
+        exec {
+            commandLine "jpackage",
+            "--input", "$buildDir/libs/build",
+            "--name", "PotoFlux",
+            "--main-jar", "PotoFlux-$version" + ".jar",
+            "--main-class", "net.minheur.potoflux.PotoFlux",
+
+            "--type", "rpm",
+            "--dest", "$buildDir/libs/output",
+
+            "--runtime-image", "${System.getProperty('java.home')}",
+
+            "--java-options", "--module-path=\$APPDIR/lib --add-modules=javafx.controls,javafx.graphics -Xmx512m",
+
+            "--install-dir", "/opt/TechnoMastery/PotoFlux",
+
+            "--app-version", "$version",
+            "--icon", "$buildDir/libs/main.png"
         }
     }
 }
